@@ -1,61 +1,128 @@
 buildscript {
-    repositories {
-        jcenter()
-        maven { 
-            name = 'forge'
-            url = 'https://files.minecraftforge.net/maven' 
-        }
-        maven {
-           name = 'sponge'
-           url = 'https://repo.spongepowered.org/maven'
-        }
-        jcenter()
-        mavenCentral()
-    }
-    dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
-    }
+	repositories {
+    	flatDir {
+    	    dirs 'libs'
+    	}
+		jcenter()
+		maven { 
+			name = 'forge'
+			url = 'https://files.minecraftforge.net/maven' 
+		}
+		maven {
+		   name = 'sponge'
+		   url = 'https://repo.spongepowered.org/maven'
+		}
+		jcenter()
+		mavenCentral()
+	}
+	dependencies {
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
+	}
 }
+
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
+apply plugin: 'eclipse'
 
-version = '0.1.1'
-group = 'net.skds.wpo'
-archivesBaseName = 'water_physics_overhaul'
+version = "${project.modVersion}"
+group = 'net.skds.' + project.modId
+archivesBaseName = project.modId + "-${project.minecraft}"
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
 
-    mappings channel: 'snapshot', version: '20201028-1.16.3'
+	mappings channel: 'snapshot', version: '20201028-1.16.3'
+
+	runs {
+		client {
+			workingDirectory project.file('run')
+			arg "--mixin"
+			arg "mixins." + project.modId + ".json"
+			arg "--username=Dev"
+			jvmArgs "-Xmx3G"
+			jvmArgs "-XX:+UseConcMarkSweepGC"
+			property "mixin.debug.export", "true"
+			property "mixin.debug", "true"
+			property "mixin.env.disableRefMap", "true"
+			property 'forge.logging.console.level', 'info'
+			property 'terminal.ansi', 'true'
+			mods {
+				skds {
+					source sourceSets.main
+				}
+			}
+		}
+
+		server {
+			workingDirectory project.file('run')
+			arg '--mixin mixins.' + project.modId + '.json'
+			arg "--username=Dev"
+			jvmArgs "-Xmx3G"
+			jvmArgs "-XX:+UseConcMarkSweepGC"
+			property "mixin.debug.export", "true"
+			property "mixin.debug", "true"
+			property "mixin.env.disableRefMap", "true"
+			property 'forge.logging.console.level', 'info'
+			property 'terminal.ansi', 'true'
+			mods {
+				skds {
+					source sourceSets.main
+				}
+			}
+		}
+	}
 
 }
 
 configurations {
-    embed
-    compile.extendsFrom(embed)
+	embed
+	compile.extendsFrom(embed)
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.0.14'
-    embed('org.spongepowered:mixin:0.8.2') { transitive = false }
-    compile fg.deobf(fileTree(dir: 'lib', include: ['*.jar']))
+	minecraft 'net.minecraftforge:forge:1.16.5-36.0.14'
+	embed('org.spongepowered:mixin:0.8.2') { transitive = false }	
+	compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
+
 jar {
-    manifest {
-        attributes([
-            "MixinConfigs": "mixins.wpo.json",
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-        ])
-    }
+	manifest {
+		attributes([
+			"MixinConfigs": 'mixins.' + project.modId + '.json',
+			"Specification-Title": project.name,
+			"Implementation-Title": project.name,
+			"Implementation-Version": "${version}"
+		])
+	}
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+task deobfJar(type:Jar) {
+    from sourceSets.main.output
+    classifier 'deobf'
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+    archives deobfJar
 }
 
 //jar.finalizedBy('reobfJar') 
 
 mixin {
-    add sourceSets.main, 'mixins.wpo.refmap.json'
+	add sourceSets.main, 'mixins.' + project.modId + '.refmap.json'
 }
